data/raw_logs/syntactic/syn_9.c.log
/Users/krishtayade/CD_Lab_Project/data/code_snippets/syntactic/syn_9.c: In function 'main':
/Users/krishtayade/CD_Lab_Project/data/code_snippets/syntactic/syn_9.c:1:19: error: 'x' undeclared (first use in this function)
    1 | int main() { do { x++; } while (x < 10) }
      |                   ^
/Users/krishtayade/CD_Lab_Project/data/code_snippets/syntactic/syn_9.c:1:19: note: each undeclared identifier is reported only once for each function it appears in
/Users/krishtayade/CD_Lab_Project/data/code_snippets/syntactic/syn_9.c:1:40: error: expected ';' before '}' token
    1 | int main() { do { x++; } while (x < 10) }
      |                                        ^~
      |                                        ;
/Users/krishtayade/CD_Lab_Project/data/code_snippets/syntactic/syn_9.c:1:1: error: expected declaration or statement at end of input
    1 | int main() { do { x++; } while (x < 10) }
      | ^~~
